Tue Aug 29 08:20:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/run_test.lst:
          Don't run UUIDTest in ACE_FOR_TAO configuration

        * bin/ace-tests.lst:
          Don't run wfmo reactor tests in ACE_FOR_TAO configuration

Tue Aug 29 00:24:48 UTC 2006  Adam Mitz  <mitza@ociweb.com>

        * docs/run_test.txt:
          Fixed Perl bug in example (needed "" instead of '' to get $ variable
          expansion) and added explanatory text on using $PerlACE::ACE_ROOT
          and $PerlACE::TAO_ROOT.

Tue Aug 29 00:26:56 UTC 2006  Ossama Othman  <ossama_othman at symantec dot com>

        * ace/SSL/ssl.mpc
        * ace/SSL/ssl_for_tao.mpc
        * bin/MakeProjectCreator/config/ssl_full.mpb:
        * bin/MakeProjectCreator/config/ssl.mpb:
        * bin/MakeProjectCreator/config/ssl_for_tao.mpb:

          Added support for new ACE_SSL subset "ACE_SSL_FOR_TAO" for
          "ace_for_tao" configuration.  The ACE_SSL_FOR_TAO subset merely
          lacks asychronous I/O support.

Tue Aug 29 00:04:29 UTC 2006  Ossama Othman  <ossama_othman at symantec dot com>

        * ace/ACE_export.h:

          SGI C++ 7.3 compiler does not support standard C++ "extern
          inline" declarations.

        * ace/Log_Msg.cpp (log):

          Corrected scalar/vector operator delete() mismatch.  The wide
          string buffer was allocated as an array.  Destroy it
          accordingly.

        * ace/MMAP_Memory_Pool.cpp (ACE_MMAP_Memory_Pool):

          Prevent potential dereferencing of null pointer.

        * ace/Svc_Conf_Param.h:

          Corrected author information.

Mon Aug 28 23:59:50 UTC 2006  Ossama Othman  <ossama_othman at symantec dot com>

        From Amnon Berger <AmnonAB at gmail dot com>
        * ace/SSL/SSL_Context.h (ACE_SSL_Context):
        * ace/SSL/SSL_Context.cpp (certificate):

          Added support for reading an X.509 certificate from memory
          instead of a file.
