@@ -9,6 +9,7 @@ use File::Spec;
 use Config;
 use FileHandle;
 use Cwd;
+use Net::Telnet ();
 
 ###############################################################################
 
