@@ -1,3 +1,10 @@
+Tue Aug 29 11:16:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * bin/PerlACE/Run_Test.pm:
+        * bin/PerlACE/ProcessVX_Unix.pm:
+        * tests/run_test.pl:
+          Changes for running tests on linux with vxworks 6.3 rtp model target
+
 Tue Aug 29 08:20:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * tests/run_test.lst:
